documentlist: fixed layout to prevent overflow

--- a/less/app.less
+++ b/less/app.less
@@ -80,6 +80,10 @@
   border-top-width: 1px;
 }
 
+#documentlist {
+  table-layout: fixed;
+}
+
 /* Display cart below document listing if
  * browser window isn't wide enough
  */
